--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ospd (2.0.1-1) focal; urgency=medium
+
+  * Import upstream version 2.0.1
+
+ -- Mohammad Razavi <mrazavi64@gmail.com>  Fri, 29 May 2020 12:38:37 +0430
+
 ospd (2.0.0-1) bionic; urgency=medium
 
   * Initial release
